2002-05-25  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/HDSL2-SHDSL-LINE-MIB: added (RFC 3276).

2002-05-25  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* win/*: Patches from Erik to ease W32 support.

2002-05-18  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/INET-ADDRESS-MIB: updated (RFC 3291).

2002-05-17  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/data.c: Fixed nodekind for iso, ccitt, and joint-iso-ccitt.
	Thanks to Mark Kaplun.

	* mibs/ietf/INET-ADDRESS-MIB: updated to the new version
	which is expected to be published as RFC rsn.

	* lib/parser-smi.y: Added check for counter access.

	* lib/check.c: Fixed check for not-accessible auxiliary objects.

	* parser-smi.y,mibs/tubs/*: Moritz Bunkus added a bunch of
	patches so that we can now parser SPPI PIBs. There are also
	a number of PIBs (temporarily in mibs/tubs/, as long as they
	are not published). Thanks to Moritz for this good piece
	of work.

2002-04-22  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/smi.c,...: Added a `parser' argument to the loadModule()
	function so that line numbers can be reported when an imported
	module cannot be loaded. Thanks to Mark Kaplun and Bill Fenner.

2002-03-05  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/check.c: Fixed a bug in the range normalization code.
	Thanks to Joey Seek <joeyseek@hotmail.com>.

	* lib/error.c: When a severe error occurs (severity <= 0), it is
	now the default error handler that terminates the process by exit().
	This means that an application now has the chance to install its
	own error handler and call any cleanup code even in case of severe
	errors. [Sorry, Dave, that it took sooo long to do this change.]

	* libsmi-0.3.1.tar.gz: released version 0.3.1.

2002-02-28  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Added checks for appropriate nodekinds
	of each node's parent node.

2002-01-28  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
